Fix expression editor function hint position, visibility and hover bugs

--- a/rust/perspective-viewer/src/less/function-dropdown.less
+++ b/rust/perspective-viewer/src/less/function-dropdown.less
@@ -38,8 +38,7 @@
         background-color: transparent;
     }
 
-    span:hover,
-    span.selected:hover {
+    .selected:hover {
         background-color: rgba(0, 0, 0, 0.05);
     }
 }
